--- a/website/newsletter/154/index.mdx
+++ b/website/newsletter/154/index.mdx
@@ -1,10 +1,9 @@
 ---
 slug: /154
-title: "This Week In React #154: Server Components, Remix, Next.js, Redwood, Million, Lucia, ElementRef, Partially Controlled, SVG Sprites, Storybook, Hermes, require.context..."
+title: "This Week In React #154: Server Components, Remix, Next.js, Redwood, Million, Lucia, ElementRef, Partially Controlled, SVG Sprites, NextUI, Storybook, Hermes, require.context..."
 authors: [slorber]
 date: 08-01-2023
 image: /img/TWIR_POST.png
-unlisted: true
 ---
 
 Hi everyone!
