--- a/website/newsletter/154/index.mdx
+++ b/website/newsletter/154/index.mdx
@@ -48,7 +48,7 @@ New Vercel article that gives a good overview of React Server Components, their 
 
 [**Everything I wish I knew before moving 50,000 lines of code to React Server Components**](https://www.mux.com/blog/what-are-react-server-components)
 
-Awesome article on RSCs! Feedback that details the 3 main challenges encountered during the adoption at Mux: no CSS-in-JS, no Context React, and additional complexity. Also provides answers to many questions and a strategy for adopting RSCs incrementally.
+Awesome article on RSCs! Feedback that details the 3 main challenges encountered during the adoption at Mux: no CSS-in-JS, no React Context, and additional complexity. Also provides answers to many questions and a strategy for adopting RSCs incrementally.
 
 ---
 
