--- a/website/newsletter/155/index.mdx
+++ b/website/newsletter/155/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /155
-title: "This Week In React #155: ..."
+title: "This Week In React #155: RSC DevTools, Next.js Caching, Radix Themes, Expo Party, Graph Gallery, Astro, Apollo, Storybook, Remix, Reanimated, Apple Settings, Stable Diffusion..."
 authors: [slorber]
 date: 08-08-2023
 unlisted: true
@@ -8,7 +8,9 @@ unlisted: true
 
 Hi everyone!
 
-<Todo />
+I thought this week was going to be pretty quiet, but I found a lot of interesting stuff, both on the React and React-Native side!
+
+The newsletter has just [passed 25,000 subscribers](https://twitter.com/sebastienlorber/status/1689285394855022592)! Thank you for reading me every week and allowing me to continue this adventure.
 
 <!-- truncate -->
 
@@ -57,7 +59,7 @@ Get started with Clerk’s [quickstarts and tutorials](https://clerk.com/docs/qu
 
 If you are looking to set up a robust form management system fully integrated in your IT infrastructure that allows you to retain full control over the data flow, and you don’t want to spend months and thousands of dollars to get it up and running, then SurveyJS is the way to go!
 
-SurveyJS  is a product suite of four open-source JavaScript libraries that allow you to create and edit multiple dynamic JSON-based forms in a drag-and-drop form builder, render them in your React app and store sensitive survey data within your in-house infrastructure. You can then render your custom surveys and forms as editable PDF files in a browser and visualize survey results with interactive charts and tables. [Learn more now](https://surveyjs.io/?utm_source=thisweekinreact&utm_medium=email).
+SurveyJS is a product suite of four open-source JavaScript libraries that allow you to create and edit multiple dynamic JSON-based forms in a drag-and-drop form builder, render them in your React app and store sensitive survey data within your in-house infrastructure. You can then render your custom surveys and forms as editable PDF files in a browser and visualize survey results with interactive charts and tables. [Learn more now](https://surveyjs.io/?utm_source=thisweekinreact&utm_medium=email).
 
 ---
 
