--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/155/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/155/index.mdx
@@ -105,7 +105,7 @@ Radix UI est une librairie React headless qui reçoit beaucoup d'éloge dernièr
 - 📦 [Remix-Workers-POC - Run loaders/actions in a Service Workers, enable offline-first support](https://github.com/scandinavianairlines/remix-workers-poc)
 - 🎥 [HTMX: The Game-Changing Alternative to React](https://www.youtube.com/watch?v=DuGyH5RvfbY)
 - 🎥 [What's new in Remotion – July 2023](https://www.youtube.com/watch?v=ABQErIOxUNg)
-- 🎥 [What is Radix UI?](https://www.youtube.com/watch?v=1JnwJBtg4VA) ???
+- 🎥 [What is Radix UI?](https://www.youtube.com/watch?v=1JnwJBtg4VA)
 - 🎙️ [Software Engineering Daily - Simplifying Documentation with Sébastien Lorber](https://softwareengineeringdaily.com/2023/08/03/simplifying-documentation/)
 
 <SubscribeFormEmbed placement="middle" />
